--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,6 +35,14 @@ android {
         minSdkVersion 21
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+     compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+        
+    }
+    kotlinOptions {
+        jvmTarget = "18"  // This should be set to 17 if you are using Java 17.
+    }
     lintOptions {
         disable 'InvalidPackage'
     }
